syntax = "proto3";

package greet;
option go_package = "github.com/SarathLUN/udemy-grpc-go-course/GreetEveryone/greetPb;greetPb";

message Greeting{
    string first_name=1;
    string last_name=2;
}

message GreetEveryoneRequest{
    Greeting greeting = 1;
}

message GreetEveryoneResponse{
    string result=1;
}

service GreetService{
    // BiDi streaming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){};
}